# shide_src

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/shide/: date.h  format.h  macros.h  make.h  sh_year_month_day.h  tzdb.h  utils.h
src/: main.cpp
